[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cdn-cache-optimizer"
version = "1.0.0"
description = "Edge CDN Cache Optimizer - OpenEnv RL Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.2,<1.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "requests==2.31.0",
    "python-multipart==0.0.9",
    "openenv-core>=0.2.0",
    "gradio>=4.44.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "api*", "server*"]